--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 arviz==0.20.0
 jupyter==1.1.1
 matplotlib==3.10.0
+networkx==3.4.2
 numpy==2.2.1
 numpyro==0.16.1
 optax==0.2.4
 pandas==2.2.3
+pymodelchecking==1.3.4
 pyomo==6.8.2
 scipy==1.15.0
