--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,10 +20,6 @@ dependencies = [
     "seaborn==0.13.2",
 ]
 
-# Explicitly declare the packages
-[tool.setuptools]
-packages = ["gp", "bf", "rl", "dsp", "image", "bandit", "spatial", "opt_ctrl"]
-
-# Correct uv configuration
-[tool.uv.python]
-version = "3.12"
+[build-system]
+requires = ["setuptools>=45", "wheel"]
+build-backend = "setuptools.build_meta"
