--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,8 +14,7 @@ dependencies = [
     "pandas==2.2.3",
     "pymodelchecking==1.3.4",
     "pyomo==6.8.2",
-    "rerun-sdk==0.23.3",
-    "rerun-notebook==0.23.3",
+    "rtamt==0.3.5",
     "scipy==1.15.0",
     "seaborn==0.13.2",
 ]
