--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,17 +5,18 @@ description = "CS702 project"
 requires-python = ">=3.12"
 dependencies = [
     "arviz==0.20.0",
-    "jupyter==1.1.1", 
+    "jupyter==1.1.1",
     "matplotlib==3.10.0",
-    "networkx==3.4.2", 
-    "numpy==2.2.1",
-    "numpyro==0.16.1",
+    "networkx==3.4.2",
+    "numpy==2.4.0",
+    "numpyro==0.19.0",
     "optax==0.2.4",
     "pandas==2.2.3",
     "pymodelchecking==1.3.4",
     "pyomo==6.8.2",
     "rtamt==0.3.5",
-    "scipy==1.15.0",
+    "scikit-learn==1.8.0",
+    "scipy==1.16.3",
     "seaborn==0.13.2",
 ]
 
