--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,12 +12,12 @@ dependencies = [
     "numpyro==0.19.0",
     "optax==0.2.4",
     "pandas==2.2.3",
-    "pymodelchecking==1.3.4",
     "pyomo==6.8.2",
     "rtamt==0.3.5",
     "scikit-learn==1.8.0",
     "scipy==1.16.3",
     "seaborn==0.13.2",
+    "stormpy==1.11.3",
 ]
 
 [build-system]
