--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,16 +28,19 @@ build-backend = "setuptools.build_meta"
 
 [tool.setuptools.packages.find]
 include = [
+    "01_introduction*",
     "02_intelligent_user_interface*",
     "04_bayesian_inference*",
     "05_validating_user_model*",
-    "07_discrete_optimization*",
-    "08_bandit*",
-    "09_reinforcement_learning*",
+    "06_bandit*",
+    "07_mdp*",
+    "08_discrete_optimization*",
+    "09_discrete_event_systems*",
     "10_conv_verification*",
     "11_dynamical_system*",
     "12_state_space_representation*",
     "13_numerical_optimization*",
     "14_optimization_control*",
     "15_bayesian_filter*",
+    "16_cont_verification*",
 ]
