--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ requires-python = ">=3.12"
 dependencies = [
     "arviz==0.20.0",
     "casadi==3.7.2",
+    "diffrax==0.7.1",
     "jaxopt==0.8.5",
     "jupyter==1.1.1",
     "matplotlib==3.10.0",
@@ -19,6 +20,7 @@ dependencies = [
     "scikit-learn==1.8.0",
     "scipy==1.16.3",
     "seaborn==0.13.2",
+    "stljax==1.1.3",
     "stormpy==1.11.3",
 ]
 
